--- a/frontend/style.css
+++ b/frontend/style.css
@@ -20,6 +20,16 @@
     padding: 20px;
     margin-top: 30px;
 }
+#AIResponse{
+    color: rgb(230, 222, 222);
+    font-family: "consolas", sans-serif;
+    font-size: 30px;
+    padding: 20px;
+    margin-top: 30px;
+
+}
+
+
 button{
 border-radius: 5px;
 }
